--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -29,11 +29,15 @@
 \newcommand{\Group}[0]{\ensuremath{\mathfrak{S}}}
 
 \newcommand{\support}{\ensuremath{supp}}
+
+\newcommand{\track}{\ensuremath{pt}}
+
 % Automorphism tool 
 \newcommand{\bliss}{\texttt{bliss}}
 \newcommand{\saucy}{\texttt{saucy3}}
 \newcommand{\nauty}{\texttt{nauty}}
 
+\newcommand{\libdsb}{\textsf{cosy}}
 
 % Solvers
 \newcommand{\minisat}{\texttt{MiniSAT}}
