--- a/main.bib
+++ b/main.bib
@@ -1,4 +1,14 @@
 
+ % Minisat 
+@inproceedings{een2003extensible,
+	title={An extensible SAT-solver},
+	author={E{\'e}n, Niklas and S{\"o}rensson, Niklas},
+	booktitle={International conference on theory and applications of satisfiability testing},
+	pages={502--518},
+	year={2003},
+	organization={Springer}
+}
+
 % == Static symmetry breaking
 
 % BreakID
@@ -352,3 +362,15 @@
 	doi={10.1109/MAHC.1984.10036},
 	ISSN={0164-1239},
 	month={Oct},}
+
+
+@Article{luks.04.amai,
+	author        = {Luks, {Eugene M.} and Roy, Amitabha},
+	title         = {The complexity of symmetry-breaking formulas},
+	journal       = {Annals of Mathematics and Artificial Intelligence},
+	year          = {2004},
+	volume        = {41},
+	number        = {1},
+	pages         = {19--45},
+	publisher     = {Springer},
+}
