--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 \usepackage{cleveref}
 \usepackage{bm}
 \usepackage{pgfplots}
-
+\usepackage{subfig}
 
 %%% Colors ====================================================================
 \definecolor{phdcol0}{RGB}{0,47,107}
