--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -128,7 +128,7 @@ some of them will be presented in section~\ref{sec:heuristics}.
 %These literals are set to true in the assignment.
 %On consequence, all clauses that own these literals are satisfied and so can be removed.
 %
-\subsubsection{Conflict Driven Clause Learning (CDCL) algorithm}
+\subsubsection{Conflict Driven Clause Learning (CDCL) algorithm}\label{sec:cdcl}
 
 The principal weakness of DPLL algorithm is to make same inconsistencies several times
 (principally due to chronological backtracking), incurring unnecessary CPU usage.\\
